monticore-grammar/src/test/resources/de/monticore/grammar/cocos/invalid/A2031/A2031.mc4
/* (c) https://github.com/MontiCore/monticore */

package  de.monticore.grammar.cocos.invalid.A2031;

grammar A2031 {

  A = B;

}
